--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         <h3>Ricette</h3>
         <ul>
             <li><a href="ricette/pollo-al-curry.html">Pollo Al Curry</a></li>
-        </ul>
+			<li><a href="ricette/torta-di-cipole.html">Torta di cipolle</a></li>
+		</ul>
     </div>
 </body>
 </html>
